--- a/Examples on Argument Passing in Python.ipynb
+++ b/Examples on Argument Passing in Python.ipynb
@@ -259,66 +259,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "413518f1",
+   "execution_count": 4,
+   "id": "6016a6af",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checkout processed by Sarah Connor:\n",
-      "Books checked out:\n",
+      "Checkout Processed by: Sarah Connor\n",
+      "\n",
+      "Books Checked Out:\n",
       "- 1984\n",
       "- Brave New World\n",
-      "Checkout duration: 3 weeks\n",
-      "Late fee per day: $0.25\n",
-      "Renewals allowed: 2\n",
-      "Special conditions: Handle with care\n",
-      "Checkout complete.\n",
-      "\n"
+      "\n",
+      "Checkout Duration: 3 weeks\n",
+      "\n",
+      "Additional Checkout Details:\n",
+      "- Renewals Allowed: 2\n",
+      "- Late Fee: $0.25\n",
+      "\n",
+      "Special Conditions For Checkout:\n",
+      "- Handle with care\n",
+      "\n",
+      "Checkout complete.\n"
      ]
     }
    ],
    "source": [
     "def checkout_books(librarian_name, *book_titles, duration='2 weeks', **kwargs):\n",
-    "    print(f\"Checkout processed by {librarian_name}:\")\n",
     "    \n",
-    "    if not book_titles:\n",
-    "        print(\"No books specified for checkout.\")\n",
-    "        return\n",
+    "    print(\"Checkout Processed by: \"+librarian_name)\n",
     "    \n",
-    "    print(\"Books checked out:\")\n",
-    "    for book_title in book_titles:\n",
-    "        print(f\"- {book_title}\")\n",
-    "\n",
-    "    print(f\"Checkout duration: {duration}\")\n",
-    "\n",
-    "    if 'late_fee_per_day' in kwargs:\n",
-    "        late_fee_per_day = kwargs['late_fee_per_day']\n",
-    "        print(f\"Late fee per day: ${late_fee_per_day}\")\n",
-    "        \n",
-    "    if 'renewals_allowed' in kwargs:\n",
-    "        renewals_allowed = kwargs['renewals_allowed']\n",
-    "        print(f\"Renewals allowed: {renewals_allowed}\")   \n",
-    "\n",
-    "    if 'special_conditions' in kwargs:\n",
-    "        special_conditions = kwargs['special_conditions']\n",
-    "        print(f\"Special conditions: {special_conditions}\")\n",
-    "\n",
-    "    print(\"Checkout complete.\\n\")\n",
+    "    print(\"\\nBooks Checked Out:\")\n",
+    "    for book in book_titles:\n",
+    "        print(\"- \"+book)\n",
+    "    \n",
+    "    print(\"\\nCheckout Duration: \"+duration)\n",
+    "    \n",
+    "    for key, value in kwargs.items():\n",
+    "        print()\n",
+    "        print(key.title().replace('_', ' ')+\":\")\n",
+    "        for detail in value:\n",
+    "            print(\"- \"+detail)\n",
+    "            \n",
+    "    print(\"\\nCheckout complete.\")\n",
     "\n",
     "# Example usage:\n",
-    "checkout_books(\"Sarah Connor\", \"1984\", \"Brave New World\", duration='3 weeks', late_fee_per_day=0.25, renewals_allowed=2, special_conditions=\"Handle with care\")"
+    "checkout_books('Sarah Connor', '1984', 'Brave New World', duration='3 weeks', additional_checkout_details = {\"Late Fee: $0.25\",\"Renewals Allowed: 2\"},special_conditions_for_checkout = {\"Handle with care\"})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6016a6af",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
