--- a/Examples on Handling Exception in Python.ipynb
+++ b/Examples on Handling Exception in Python.ipynb
@@ -259,6 +259,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2b46acdd",
+   "metadata": {},
+   "source": [
+    "# Assignment 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "d39cf091",
